fixed section name alignment

--- a/styles/styleform.css
+++ b/styles/styleform.css
@@ -84,5 +84,7 @@ margin-top: 20px;
     .conocimientos{
         padding:20px;
     }
-    
+    .as{
+        text-align: center;
+    }
 }
